tests/sksl/errors/ReservedNameDmat2.glsl
### Compilation failed:

error: 1: name 'dmat2' is reserved
int dmat2, dmat2x2, dmat2x3, dmat2x4;
    ^^^^^
error: 1: name 'dmat2x2' is reserved
int dmat2, dmat2x2, dmat2x3, dmat2x4;
           ^^^^^^^
error: 1: name 'dmat2x3' is reserved
int dmat2, dmat2x2, dmat2x3, dmat2x4;
                    ^^^^^^^
error: 1: name 'dmat2x4' is reserved
int dmat2, dmat2x2, dmat2x3, dmat2x4;
                             ^^^^^^^
4 errors
